Modularize dataregistry